# tcc_xai_federated_vs_centralized_learning

./: .gitignore  README.md  pyproject.toml  sync_hyperparameters.ps1  test_metrics_all_models.csv
centralized_training/: train_centralized_mlp.py  train_centralized_xgboost.py
centralized_training/models/mlp/: best_hyperparameters.json  centralized_model_best.joblib  training_history.csv  training_history.json
centralized_training/models/xgboost/: best_hyperparameters.json  centralized_model_best.joblib  training_history.csv  training_history.json
datasets/: create_train_test_split.py  create_val_split.py  shap_sample_indices.csv  test_indices.csv  train_indices.csv  val_indices.csv  validate_split.py
datasets/rain_australia/by_location/: Adelaide_weatherAUS.csv  Albury_weatherAUS.csv  AliceSprings_weatherAUS.csv  BadgerysCreek_weatherAUS.csv  Ballarat_weatherAUS.csv  Bendigo_weatherAUS.csv  Brisbane_weatherAUS.csv  Cairns_weatherAUS.csv  Canberra_weatherAUS.csv  Cobar_weatherAUS.csv  CoffsHarbour_weatherAUS.csv  Dartmoor_weatherAUS.csv  Darwin_weatherAUS.csv  GoldCoast_weatherAUS.csv  Hobart_weatherAUS.csv  Katherine_weatherAUS.csv  Launceston_weatherAUS.csv  MelbourneAirport_weatherAUS.csv  Melbourne_weatherAUS.csv  Mildura_weatherAUS.csv  Moree_weatherAUS.csv  MountGambier_weatherAUS.csv  Nhil_weatherAUS.csv  NorahHead_weatherAUS.csv  NorfolkIsland_weatherAUS.csv  Nuriootpa_weatherAUS.csv  PearceRAAF_weatherAUS.csv  PerthAirport_weatherAUS.csv  Perth_weatherAUS.csv  Portland_weatherAUS.csv  Richmond_weatherAUS.csv  Sale_weatherAUS.csv  SydneyAirport_weatherAUS.csv  Sydney_weatherAUS.csv  Townsville_weatherAUS.csv  Tuggeranong_weatherAUS.csv  Uluru_weatherAUS.csv  WaggaWagga_weatherAUS.csv  Walpole_weatherAUS.csv  Watsonia_weatherAUS.csv  (+4 more)
flwr-mlp/: pyproject.toml
flwr-mlp/federated_mlp/: __init__.py  client_app.py  load_best_checkpoint.py  server_app.py  task.py
flwr-mlp/models/: global_model_final.joblib  global_model_final.pt  training_history.csv  training_history.json
flwr-mlp/models/checkpoints/: round_001.pt  round_002.pt  round_003.pt  round_004.pt  round_005.pt  round_006.pt  round_007.pt  round_008.pt  round_009.pt  round_010.pt  round_011.pt  round_012.pt  round_013.pt  round_014.pt  round_015.pt  round_016.pt  round_017.pt  round_018.pt  round_019.pt  round_020.pt  round_021.pt  round_022.pt  round_023.pt  round_024.pt  round_025.pt  round_026.pt  round_027.pt  round_028.pt  round_029.pt  round_030.pt
flwr-xgboost/: .gitignore  pyproject.toml
flwr-xgboost/federated_xgboost/: __init__.py  client_app.py  server_app.py  task.py
flwr-xgboost/models/: global_model_bagging_final.joblib  global_model_bagging_final.json  global_model_bagging_final.pt  global_model_cyclic_final.joblib  global_model_cyclic_final.json  global_model_cyclic_final.pt  training_history_bagging.csv  training_history_cyclic.csv
notebooks/: data_cleaning.ipynb  label_skew_by_location.csv  model_comparison_formatted.txt  model_comparison_results.csv  model_evaluation_comparison.ipynb  resultados_e_discussao_completo.ipynb  spearman_correlation_results.csv
utils/: __init__.py  generate_test_metrics.py  shap_utils.py  training_utils.py  xgboost_utils.py
xAI/: generate_shap_global_comparison.py  lime_analysis_centralized_mlp.py  lime_analysis_centralized_xgboost.py  lime_analysis_federated_mlp.py  lime_analysis_federated_xgboost_bagging.py  lime_analysis_federated_xgboost_cyclic.py  shap_analysis_centralized_mlp.py  shap_analysis_centralized_xgboost.py  shap_analysis_federated_mlp.py  shap_analysis_federated_xgboost_bagging.py  shap_analysis_federated_xgboost_cyclic.py
xAI/lime_results_centralized/mlp/: comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  lime_instance_abs_weights.csv  lime_instance_fidelity.csv  lime_instance_weights.csv  summary.md
xAI/lime_results_centralized/xgboost/: comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  lime_instance_abs_weights.csv  lime_instance_fidelity.csv  lime_instance_weights.csv  summary.md
xAI/lime_results_federated/mlp/: comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  lime_instance_abs_weights.csv  lime_instance_weights.csv  summary.md
xAI/lime_results_federated/xgboost/bagging_strategy/: comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  lime_instance_abs_weights.csv  lime_instance_fidelity.csv  lime_instance_weights.csv  summary.md
xAI/lime_results_federated/xgboost/cyclic_strategy/: comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  lime_instance_abs_weights.csv  lime_instance_fidelity.csv  lime_instance_weights.csv  summary.md
xAI/shap_results_centralized/mlp/: comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  feature_values.npy  shap_values.npy
xAI/shap_results_centralized/xgboost/: base_value.json  comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  shap_values.npy  target_values.npy
xAI/shap_results_federated/mlp/: comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  feature_values.npy  shap_values.npy
xAI/shap_results_federated/xgboost/bagging_strategy/: base_value.json  comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  shap_values.npy
xAI/shap_results_federated/xgboost/cyclic_strategy/: base_value.json  comparison_class_0_vs_1.csv  feature_importance_all.csv  feature_importance_class_0.csv  feature_importance_class_1.csv  feature_names.json  feature_values.npy  shap_values.npy
