[project]
name = "tcc-pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Victor",email = "antoniovictorob@hotmail.com"}
]
readme = "README.md"
requires-python = "3.11.7"
dependencies = [
    "flwr[simulation] (>=1.22.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "shap ==0.49.1",
    "lime (>=0.2.0,<0.3.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "xgboost ==3.0.0",
    "scikit-learn ==1.7.2",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
