# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-mlp"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "torch==2.7.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Antonio"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "federated_mlp.server_app:app"
clientapp = "federated_mlp.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
# ===== SERVER CONFIGURATION =====
num-server-rounds = 30          # Number of federated rounds
fraction-fit = 1.0              # Fraction of clients sampled for training per round (0.5 = 50%)
fraction-evaluate = 1.0         # Fraction of clients sampled for evaluation (1.0 = 100%)
min-available-clients = 44       # Minimum clients required to start training

# ===== CLIENT TRAINING CONFIGURATION =====
local-epochs = 5                # Number of local epochs per client per round
batch-size = 32
learning-rate = 0.0014015879193167
test-split = 0.2                # Train/test split ratio (0.2 = 80/20)

# ===== MODEL ARCHITECTURE =====
hidden-layer-1 = 256
hidden-layer-2 = 80
hidden-layer-3 = 64
dropout-1 = 0.158772267531727
dropout-2 = 0.199045808970259

# ===== DATA CONFIGURATION =====
use-location-feature = false    # Include Location as a feature (requires one-hot encoding)

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 44 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 44
